fix layout overlap when progress slot has elements

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -10,17 +10,17 @@
 
 .container {
   @apply flex 
-  flex-col 
+  flex-col
   mx-auto 
-  w-full
-  h-auto;
+  w-full;
   margin-block: 0;
   margin-inline: auto;
-  border-block-end: 1px solid;
   background-color: var(--calcite-navigation-background, var(--calcite-ui-foreground-1));
-  border-block-end-color: var(--calcite-navigation-border-color, var(--calcite-ui-border-3));
-  &.hide {
-    display: none;
+  &.primary,
+  &.secondary,
+  &.tertiary {
+    border-block-end: 1px solid;
+    border-block-end-color: var(--calcite-navigation-border-color, var(--calcite-ui-border-3));
   }
 }
 
@@ -37,11 +37,11 @@
   @apply h-16;
 }
 
-.navigation-secondary {
+.secondary {
   @apply h-12;
 }
 
-.navigation-tertiary {
+.tertiary {
   @apply h-12;
 }
 
@@ -53,6 +53,9 @@
   margin-block: 0;
   inline-size: var(--calcite-navigation-width, 100%);
   max-inline-size: 100%;
+  &.progress-bar {
+    margin-block-start: 0.125rem;
+  }
 }
 
 slot[name] {
